@@ -1,3 +1,9 @@
+2002-04-23  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* gamedat.cc,gamewin.cc,game.cc:  get_game_identity() moved into
+	Game_window class, handles compressed savegames, and is used to
+	check IDENTITY before doing a restore.
+
 2002-04-23  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* configure.in: applied patch by Kevin Lacquement to fix some
 	header detection problems in configure
